fix(#6458): correct Postgres Execute row-limit (portal suspension) (#6658)
Co-authored-by: Claude Sonnet 5 <noreply@anthropic.com>
(cherry picked from commit b63bab51805b9cbdbdd6cf3e485b2f099a31450e)